--- a/card_cfg/unc.conf
+++ b/card_cfg/unc.conf
@@ -1,9 +1,12 @@
 lumi lnN
 
 tt_xsec lnN
+btag_eff lnN
 singlet_xsec lnN
 
 tagging_notag   lnN
 tagging_leadtag lnN
 tagging_subtag  lnN
 tagging_ditag   lnN
+
+
