--- a/ttxs.cfg
+++ b/ttxs.cfg
@@ -3,6 +3,8 @@ skew_ttpt_distribution=0
 ttsolver_input=Prob_parton.root
 lepton_sf=Lepton_SF.root
 jet_uncertainties=jetuncertainty.root
+btag_sf=CSVv2.csv
+btag_eff=btag_efficiencies.root
 pseudotop=0
 
 [gen_jets]
