analysis updates and bugfixes

--- a/permProbComputer.cfg
+++ b/permProbComputer.cfg
@@ -3,6 +3,8 @@ skew_ttpt_distribution=0
 ttsolver_input=Prob_parton.root
 lepton_sf=Lepton_SF.root
 jet_uncertainties=jetuncertainty.root
+btag_sf=CSVv2.csv
+btag_eff=btag_efficiencies.root
 pseudotop=0
 
 [gen_jets]
@@ -59,6 +61,6 @@ hardb_pt=35.
 softb_pt=25.
 hardw_pt=35.
 softw_pt=25.
-tightb=CSVTIGHT
-looseb=CSVMEDIUM
+tightb=CSVMEDIUM
+looseb=NONE
 
