--- a/permProbComputer.cfg
+++ b/permProbComputer.cfg
@@ -1,9 +1,9 @@
 [general]
 skew_ttpt_distribution=0
-ttsolver_input=Prob_parton.root
-lepton_sf=Lepton_SF.root
+muon_sf=muon_sf_2015_25ns_TightID_TightIso.root
+electron_sf=electron_sf_2015_25ns_CutBasedTightID.root
 jet_uncertainties=jetuncertainty.root
-btag_sf=CSVv2.csv
+btag_sf=CSVv2_25ns_v1.csv 
 btag_eff=btag_efficiencies.root
 pseudotop=0
 
