--- a/ctag_eff.cfg
+++ b/ctag_eff.cfg
@@ -3,9 +3,11 @@ skew_ttpt_distribution=0
 muon_sf=muon_sf_2015_25ns_TightID_TightIso.root
 electron_sf=electron_sf_2015_25ns_CutBasedTightID.root
 jet_uncertainties=jetuncertainty_V6.root
-btag_sf=CSVv2_25ns_v1.csv 
-btag_eff=btag_efficiencies.root
+btag_sf=CSVv2_76X_preliminary.csv
+btag_eff=btag_general_efficiencies.root
 pseudotop=0
+csv_sffile=CSVv2_76X_preliminary.csv
+wjets_efficiencies=btag_wjets_efficiencies.root
 
 [gen_jets]
 ptmin=0.
@@ -55,12 +57,16 @@ ptmin=25.
 etamax=2.4
 
 [permutations]
-max_jets=300
-max_bjets=2
-hardb_pt=35.
-softb_pt=25.
-hardw_pt=35.
+max_jets=6
+max_bjets=0
+hardb_pt=40.
+softb_pt=30.
+hardw_pt=25.
 softw_pt=25.
+tightb=NONE
+looseb=NONE
+ordering=mass_discriminant
+
+[best_permutation]
 tightb=CSVMEDIUM
 looseb=CSVLOOSE
-ordering=mass_discriminant
