--- a/permProbComputer.cfg
+++ b/permProbComputer.cfg
@@ -2,9 +2,9 @@
 skew_ttpt_distribution=0
 muon_sf=muon_sf_2015_25ns_TightID_TightIso.root
 electron_sf=electron_sf_2015_25ns_CutBasedTightID.root
-jet_uncertainties=jetuncertainty.root
-btag_sf=CSVv2_25ns_v1.csv 
-btag_eff=btag_efficiencies.root
+jet_uncertainties=jetuncertainty_V6.root
+btag_sf=CSVv2_76X_preliminary.csv
+btag_eff=btag_general_efficiencies.root
 pseudotop=0
 
 [gen_jets]
@@ -56,11 +56,12 @@ etamax=2.4
 
 [permutations]
 max_jets=300
-max_bjets=2
+max_bjets=0
 hardb_pt=35.
 softb_pt=25.
-hardw_pt=35.
+hardw_pt=25.
 softw_pt=25.
 tightb=CSVMEDIUM
 looseb=CSVLOOSE
+ordering=mass_discriminant
 
