--- a/permProbComputer.cfg
+++ b/permProbComputer.cfg
@@ -2,7 +2,7 @@
 skew_ttpt_distribution=0
 muon_sf=muon_sf_2015_25ns_TightID_TightIso.root
 electron_sf=electron_sf_2015_25ns_CutBasedTightID.root
-jet_uncertainties=jetuncertainty_V6.root
+jet_uncertainties=jetuncertainty_415_25ns_v2.root
 btag_sf=CSVv2_76X_preliminary.csv
 btag_eff=btag_general_efficiencies.root
 pseudotop=0
@@ -61,7 +61,7 @@ hardb_pt=35.
 softb_pt=25.
 hardw_pt=25.
 softw_pt=25.
-tightb=CSVMEDIUM
+tightb=CSVTIGHT
 looseb=CSVLOOSE
 ordering=mass_discriminant
 
