--- a/topspin_gen.cfg
+++ b/topspin_gen.cfg
@@ -2,13 +2,12 @@
 skew_ttpt_distribution=0
 muon_sf=muon_sf_2015_25ns_TightID_TightIso.root
 electron_sf=electron_sf_2015_25ns_CutBasedTightID.root
-jet_uncertainties=jetuncertainty_415_25ns_v2.root
+jet_uncertainties=jetuncertainty_V6.root
 btag_sf=CSVv2_76X_preliminary.csv
-btag_eff=ttselection_CSVTIGHT_CSVLOOSE_efficiencies.root
+btag_eff=btag_general_efficiencies.root
 pseudotop=0
 csv_sffile=CSVv2_76X_preliminary.csv
 wjets_efficiencies=btag_wjets_efficiencies.root
-JER=jer_Fall15_v0.root
 
 [gen_jets]
 ptmin=0.
@@ -33,12 +32,12 @@ drmax=0.4
 mode=DR_PTMAX
 
 [loose_muons]
-id=LOOSE_15
+id=LOOSE_12
 ptmin=15.
 etamax=2.1
 
 [tight_muons]
-id=TIGHT_15
+id=TIGHT_12
 ptmin=30.
 etamax=2.1
 
@@ -58,7 +57,7 @@ ptmin=25.
 etamax=2.4
 
 [permutations]
-max_jets=600
+max_jets=300
 max_bjets=0
 hardb_pt=35.
 softb_pt=25.
@@ -69,5 +68,5 @@ looseb=NONE
 ordering=mass_discriminant
 
 [best_permutation]
-tightb=CSVTIGHT
+tightb=CSVMEDIUM
 looseb=CSVLOOSE
