work in progress: bug hunt

--- a/topspin_gen.cfg
+++ b/topspin_gen.cfg
@@ -8,6 +8,8 @@ btag_eff=btag_general_efficiencies.root
 pseudotop=0
 csv_sffile=CSVv2_76X_preliminary.csv
 wjets_efficiencies=btag_wjets_efficiencies.root
+JER=jer_Fall15_v0.root
+uselhe=0
 
 [gen_jets]
 ptmin=0.
@@ -63,10 +65,5 @@ hardb_pt=35.
 softb_pt=25.
 hardw_pt=25.
 softw_pt=25.
-tightb=NONE
-looseb=NONE
-ordering=mass_discriminant
-
-[best_permutation]
-tightb=CSVMEDIUM
+tightb=CSVTIGHT
 looseb=CSVLOOSE
