major cleanup, moved the scripts in sub-directories. Added Kinematic fitter

--- a/topspin_gen.cfg
+++ b/topspin_gen.cfg
@@ -2,14 +2,20 @@
 skew_ttpt_distribution=0
 muon_sf=muon_sf_2015_25ns_TightID_TightIso.root
 electron_sf=electron_sf_2015_25ns_CutBasedTightID.root
-jet_uncertainties=jetuncertainty_V6.root
 btag_sf=CSVv2_76X_preliminary.csv
 btag_eff=btag_general_efficiencies.root
 pseudotop=0
 csv_sffile=CSVv2_76X_preliminary.csv
 wjets_efficiencies=btag_wjets_efficiencies.root
-JER=jer_Fall15_v0.root
 uselhe=0
+
+[kinfit]
+maxiter=100
+precision=0.01
+
+[JERC]
+JES=jetuncertainty_V6.root
+JER=jer_Fall15_v0.root
 
 [gen_jets]
 ptmin=0.
@@ -57,6 +63,7 @@ etamax=2.1
 n_min=4
 ptmin=25.
 etamax=2.4
+applyJER=0
 
 [permutations]
 max_jets=300
