Work in progress

--- a/permProbComputer.cfg
+++ b/permProbComputer.cfg
@@ -7,6 +7,10 @@ btag_sf=CSVv2_76X_preliminary.csv
 btag_eff=btag_general_efficiencies.root
 pseudotop=0
 
+[JERC]
+JES=jetuncertainty_V6.root
+JER=jer_Fall15_v0.root
+
 [gen_jets]
 ptmin=0.
 etamax=999.
@@ -53,6 +57,7 @@ etamax=2.1
 n_min=4
 ptmin=25.
 etamax=2.4
+applyJER=1
 
 [permutations]
 max_jets=300
