update cfgs, should be moved elsewhere?

--- a/permProbComputer.cfg
+++ b/permProbComputer.cfg
@@ -1,11 +1,14 @@
 [general]
 skew_ttpt_distribution=0
-muon_sf=muon_sf_2015_25ns_TightID_TightIso.root
-electron_sf=electron_sf_2015_25ns_CutBasedTightID.root
-jet_uncertainties=jetuncertainty_415_25ns_v2.root
+muon_sf=muon_sf_Moriond16_25ns_TightID_TrkIso.root
+electron_sf=electron_sf_Moriond16_CutBasedMedID_NOTRG.root
 btag_sf=CSVv2_76X_preliminary.csv
 btag_eff=btag_general_efficiencies.root
 pseudotop=0
+
+[JERC]
+JES=jetuncertainty_V6.root
+JER=jer_Fall15_v0.root
 
 [gen_jets]
 ptmin=0.
@@ -30,12 +33,12 @@ drmax=0.4
 mode=DR_PTMAX
 
 [loose_muons]
-id=LOOSE_12
+id=LOOSE_15
 ptmin=15.
 etamax=2.1
 
 [tight_muons]
-id=TIGHT_12
+id=TIGHT_15
 ptmin=30.
 etamax=2.1
 
@@ -53,6 +56,7 @@ etamax=2.1
 n_min=4
 ptmin=25.
 etamax=2.4
+applyJER=1
 
 [permutations]
 max_jets=300
