--- a/btag_topology_effs.cfg
+++ b/btag_topology_effs.cfg
@@ -1,13 +1,13 @@
 [general]
 skew_ttpt_distribution=0
-muon_sf=muon_sf_2015_25ns_TightID_TightIso.root
-electron_sf=electron_sf_2015_25ns_CutBasedTightID.root
-jet_uncertainties=jetuncertainty_415_25ns_v2.root
+muon_sf=muon_sf_Moriond16_25ns_TightID_TrkIso.root
+electron_sf=electron_sf_Moriond16_CutBasedMedID_NOTRG.root
 btag_sf=CSVv2_76X_preliminary.csv
-btag_eff=ttselection_CSVTIGHT_CSVLOOSE_efficiencies.root
+btag_eff=btag_general_efficiencies.root
 pseudotop=0
-csv_sffile=CSVv2_76X_preliminary.csv
-wjets_efficiencies=btag_wjets_efficiencies.root
+
+[JERC]
+JES=jetuncertainty_V6.root
 JER=jer_Fall15_v0.root
 
 [gen_jets]
@@ -56,6 +56,7 @@ etamax=2.1
 n_min=4
 ptmin=25.
 etamax=2.4
+applyJER=1
 
 [permutations]
 max_jets=600
@@ -69,5 +70,5 @@ looseb=NONE
 ordering=mass_discriminant
 
 [best_permutation]
-tightb=CSVMEDIUM
-looseb=NONE
+tightb=CSVTIGHT
+looseb=CSVLOOSE
