--- a/ctag_eff.cfg
+++ b/ctag_eff.cfg
@@ -3,13 +3,15 @@ skew_ttpt_distribution=0
 muon_sf=muon_sf_Moriond16_25ns_TightID_TrkIso.root
 #muon_sf_2015_25ns_TightID_TightIso.root
 electron_sf=electron_sf_Moriond16_CutBasedMedID_NOTRG.root
-#electron_sf_2015_25ns_CutBasedTightID.root
-jet_uncertainties=jetuncertainty_415_25ns_v2.root
 btag_sf=CSVv2_76X_preliminary.csv
 btag_eff=ttselection_CSVTIGHT_CSVLOOSE_efficiencies.root
 pseudotop=0
 csv_sffile=CSVv2_76X_preliminary.csv
-wjets_efficiencies=btag_wjets_efficiencies.root
+#wjets_efficiencies=btag_wjets_efficiencies.root
+wjets_efficiencies=btag_wjets_efficiencies_CSVTIGHT_CSVLOOSE.root
+
+[JERC]
+JES=jetuncertainty_V6.root
 JER=jer_Fall15_v0.root
 
 [gen_jets]
