added SF for ctag light jets, fixed tasks according to new directories

--- a/ctag_eff.cfg
+++ b/ctag_eff.cfg
@@ -10,6 +10,7 @@ btag_eff=ttselection_CSVTIGHT_CSVLOOSE_efficiencies.root
 pseudotop=0
 csv_sffile=CSVv2_76X_preliminary.csv
 wjets_efficiencies=btag_wjets_efficiencies.root
+ctag_sffile=CTag_sf_light.csv
 
 [JERC]
 JES=jetuncertainty_V6.root
