propagating sync to analyzers

--- a/htt_scripts/htt_simple.cfg
+++ b/htt_scripts/htt_simple.cfg
@@ -7,9 +7,12 @@ btag_sf=CSVv2_76X_preliminary.csv
 btag_eff=htt_alljets_CSVMEDIUM_CSVMEDIUM_efficiencies.root
 pseudotop=0
 
-[JERC]
-JES=jetuncertainty_V6.root
-JER=jer_Fall15_v0.root
+[event]
+MT=50.0
+use_trig=1
+use_filters=1
+smear_met=0
+#trig_config=2015
 
 [loose_muons]
 id=LOOSE_15Db
@@ -27,7 +30,7 @@ ptmin=20.
 etamax=2.5
 
 [tight_electrons]      
-id=TIGHT_15
+id=TIGHT_15_NoECAL_Gap
 ptmin=25.
 etamax=2.5
 
@@ -39,7 +42,4 @@ applyJER=1
 
 [bjets]
 tightb=CSVMEDIUM
-looseb=CSVMEDIUM
-
-[event]
-MT=50.0
+looseb=NONE
