--- a/ctag_eff.cfg
+++ b/ctag_eff.cfg
@@ -10,7 +10,8 @@ btag_eff=ttselection_CSVTIGHT_CSVLOOSE_efficiencies.root
 pseudotop=0
 csv_sffile=CSVv2_76X_preliminary.csv
 wjets_efficiencies=btag_wjets_efficiencies_CSVTIGHT_CSVLOOSE.root 
-ctag_sffile=CTag_sf_light.csv
+#ctag_sffile=CTag_sf_light.csv
+ctag_sffile=SF_update_V0_unc.csv
 
 [JERC]
 JES=jetuncertainty_V6.root
