--- a/htt_scripts/htt_simple.cfg
+++ b/htt_scripts/htt_simple.cfg
@@ -1,10 +1,10 @@
 [general]
 skew_ttpt_distribution=0
-muon_sf=muon_sf_Moriond16_25ns_TightID_IsoDb.root
+muon_sf=muon_sf_Moriond16_25ns_TightID_TrkIso.root
 #muon_sf_2015_25ns_TightID_TightIso.root
 electron_sf=electron_sf_Moriond16_CutBasedMedID_NOTRG.root
 btag_sf=CSVv2_76X_preliminary.csv
-btag_eff=htt_alljets_CSVMEDIUM_NONE_efficiencies.root
+btag_eff=htt_alljets_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 pseudotop=0
 
 [event]
@@ -21,28 +21,28 @@ etamax=2.4
 
 [loose_muons]
 id=ANTILOOSE_15Db 
-ptmin=22.
+ptmin=26.
 etamax=2.4
 
 [tight_muons]
 id=TIGHT_15Db
-ptmin=22.
+ptmin=26.
 etamax=2.4
 
 [veto_electrons]
 id=VETO_15
 ptmin=20.
-etamax=2.5
+etamax=2.1
 
 [loose_electrons]
 id=NOTVETO_15
-ptmin=25.
-etamax=2.5
+ptmin=35.
+etamax=2.1
 
 [tight_electrons]      
 id=TIGHT_15_NoECAL_Gap
-ptmin=25.
-etamax=2.5
+ptmin=35.
+etamax=2.1
 
 [jets]
 n_min=4
@@ -57,5 +57,5 @@ hardb_pt=30.
 softb_pt=30.
 hardw_pt=30.
 softw_pt=30.
-tightb=CSVMEDIUM
-looseb=NONE
+tightb=MVAMEDIUM
+looseb=MVAMEDIUM
