--- a/htt_scripts/htt_simple.cfg
+++ b/htt_scripts/htt_simple.cfg
@@ -3,7 +3,7 @@ skew_ttpt_distribution=0
 muon_sf=muon_sf_Moriond16_25ns_TightID_TrkIso.root
 #muon_sf_2015_25ns_TightID_TightIso.root
 electron_sf=electron_sf_Moriond16_CutBasedMedID_NOTRG.root
-btag_sf=CSVv2_76X_preliminary.csv
+btag_sf=cMVAv2_ichep.csv
 btag_eff=htt_alljets_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 pseudotop=0
 
