--- a/htt_scripts/htt_simple.cfg
+++ b/htt_scripts/htt_simple.cfg
@@ -1,11 +1,17 @@
 [general]
 skew_ttpt_distribution=0
-muon_sf=muon_sf_Moriond16_25ns_TightID_TrkIso.root
-#muon_sf_2015_25ns_TightID_TightIso.root
-electron_sf=electron_sf_Moriond16_CutBasedMedID_NOTRG.root
+muon_sf=muon_sf_ICHEP2016_TightID_TightIso.root
+electron_sf=electron_sf_ICHEP2016_CutBasedTightID.root
 btag_sf=cMVAv2_ichep.csv
 btag_eff=htt_alljets_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 pseudotop=0
+
+[ttsolver]
+filename=htt_permutations.root
+dirname=nosys
+btag=0
+nusolver=1
+invmass=1
 
 [event]
 MT=50.0
