update cuts and SFs

--- a/ctag_scripts/ctag_eff.cfg
+++ b/ctag_scripts/ctag_eff.cfg
@@ -1,15 +1,23 @@
 [general]
 skew_ttpt_distribution=0
-muon_sf=muon_sf_ICHEP16_PRELIMINARY_TightID_TrkIso.root 
-electron_sf=electron_sf_ICHEP16_PRELIMINARY_CutBasedTightID.root
-btag_sf=CSVv2_ICHEP16_4invfb.csv
-btag_eff=ttselection_CSVTIGHT_CSVLOOSE_efficiencies.root
+btag_sf=CSVv2_ichep.csv
+btag_eff=ctageff_ttsel_CSVTIGHT_CSVLOOSE_efficiencies.root
 pseudotop=0
-csv_sffile=CSVv2_ICHEP16_4invfb.csv
-wjets_efficiencies=btag_wjets_efficiencies_CSVTIGHT_CSVLOOSE.root
-cmva_sffile=cMVAv2_ICHEP16_4invfb.csv
-ctag_sffile=CTag_sf_light.csv
+csv_sffile=CSVv2_ichep.csv
+wjets_efficiencies=ctageff_wjets_efficiencies_CSVTIGHT_CSVLOOSE.root
+cmva_sffile=cMVAv2_ichep.csv
+ctag_sffile=CSVv2_ichep.csv
 apply_trigger=0
+
+muon_sf=muon_sf_ICHEP2016_TightID_TightIso.root
+electron_sf=electron_sf_ICHEP2016_CutBasedTightID.root
+
+[ttsolver]
+filename=ctag_eff_permutations.root
+dirname=nosys
+btag=0
+nusolver=0
+invmass=1
 
 [event]
 use_trig=0
@@ -22,23 +30,23 @@ drmax=0.4
 mode=DR_PTMAX
 
 [veto_muons]
-id=LOOSE_15
+id=LOOSE_15Db
 ptmin=15.
 etamax=2.1
 
 [tight_muons]
-id=TIGHT_15
+id=TIGHT_15Db
 ptmin=30.
 etamax=2.1
 
 [veto_electrons]
-id=LOOSE_15
+id=VETO_15
 ptmin=15.
 etamax=2.1
 
 [tight_electrons]      
 id=MEDIUM_15
-ptmin=30.
+ptmin=35.
 etamax=2.1
 
 [jets]
