--- a/htt_scripts/htt_baseline.cfg
+++ b/htt_scripts/htt_baseline.cfg
@@ -3,20 +3,13 @@ skew_ttpt_distribution=0
 muon_sf=muon_sf_ICHEP2016_TightID_TightIso.root
 electron_sf=electron_sf_ICHEP2016_CutBasedTightID.root
 btag_sf=cMVAv2_ichep.csv
-btag_eff=htt_alljets_MVATIGHT_MVALOOSE_efficiencies.root
-#htt_alljets_NONE_NONE_efficiencies.root
-#htt_alljets_MVAMEDIUM_MVAMEDIUM_efficiencies.root
+btag_eff=htt_alljets_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 pseudotop=0
 
 [ttsolver]
-filename=dev_extended.root
-#dev_extended.root
-#htt_fulllax.root
-#htt_permutations.root
+filename=htt_permutations.root
 dirname=nosys
 btag=0
-ptratio=0
-qarkgluon=0
 nusolver=1
 invmass=1
 
@@ -66,9 +59,9 @@ applyJER=1
 [permutations]
 max_jets=600
 max_bjets=0
-hardb_pt=20.
-softb_pt=20.
-hardw_pt=20.
-softw_pt=20.
-tightb=MVATIGHT
-looseb=MVALOOSE
+hardb_pt=30.
+softb_pt=30.
+hardw_pt=30.
+softw_pt=30.
+tightb=MVAMEDIUM
+looseb=MVAMEDIUM
