--- a/ctag_scripts/ctag_eff.cfg
+++ b/ctag_scripts/ctag_eff.cfg
@@ -11,7 +11,7 @@ ctag_sffile=CTaggerMoriond17_PRELIMINARY.csv
 apply_trigger=0
 
 muon_sf=muon_sf_Moriond17_TightID_TightIso_PRELIMINARY.root
-electron_sf=electron_sf_ICHEP2016_CutBasedTightID.root
+electron_sf=electron_sf_Moriond17_TightCutID.root
 
 [ttsolver]
 filename=ctag_eff_permutations.root
@@ -25,6 +25,7 @@ use_trig=1
 use_filters=1
 smear_met=0
 trig_config=2016
+MTCut=50
 
 [gen_matching]
 drmax=0.4
@@ -52,6 +53,7 @@ etamax=-0.2
 
 [jets]
 n_min=4
+n_max=4
 ptmin=25.
 etamax=2.4
 applyJER=1
