--- a/htt_scripts/htt_baseline_j20.cfg
+++ b/htt_scripts/htt_baseline_j20.cfg
@@ -14,7 +14,7 @@ nusolver=1
 invmass=1
 
 [event]
-MT=50.0
+MTCut=50.0
 use_trig=1
 use_filters=1
 smear_met=0
@@ -42,12 +42,12 @@ etascmax=2.5
 
 [loose_electrons]
 id=NOTVETO_15
-ptmin=35.
+ptmin=30.
 etascmax=2.1
 
 [tight_electrons]      
 id=TIGHT_15_NoECAL_Gap
-ptmin=35.
+ptmin=30.
 etascmax=2.1
 
 [jets]
