Added 2D mass and nu discriminants

--- a/gen_partons.cfg
+++ b/gen_partons.cfg
@@ -1,72 +1,115 @@
+#[general]
+#skew_ttpt_distribution=0
+#muon_sf=muon_sf_Moriond16_25ns_TightID_TrkIso.root
+#electron_sf=electron_sf_Moriond16_CutBasedMedID_NOTRG.root
+#btag_sf=CSVv2_76X_preliminary.csv
+#btag_eff=btag_general_efficiencies.root
+#pseudotop=0
+
 [general]
 skew_ttpt_distribution=0
-muon_sf=muon_sf_Moriond16_25ns_TightID_TrkIso.root
-electron_sf=electron_sf_Moriond16_CutBasedMedID_NOTRG.root
-btag_sf=CSVv2_76X_preliminary.csv
-btag_eff=btag_general_efficiencies.root
+muon_sf=muon_sf_ICHEP2016_TightID_TightIso.root
+electron_sf=electron_sf_ICHEP2016_CutBasedTightID.root
+btag_sf=cMVAv2_ichep.csv
+btag_eff=htt_alljets_MVATIGHT_MVALOOSE_efficiencies.root
+#htt_alljets_NONE_NONE_efficiencies.root
+#htt_alljets_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 pseudotop=0
 
-[gen_jets]
-ptmin=0.
-etamax=999.
+[ttsolver]
+#filename=prob_ttJets.permProbComputer.test.root
+filename=prob_ttJetsAll.root
+dirname=nosys
+ptratio=0
+qarkgluon=0
+btag=0
+nusolver=0
+invmass=0
+permdisc=1
 
-[acceptance]
-lepton_ptmin=0.
-lepton_etamax=999.
+#[event]
+#MT=50.0
+#use_trig=0
+#use_filters=1
+#smear_met=0
+##trig_config=2015
 
-wjet_ptsoft=0.
-wjet_pthard=0.
-wjet_etamax=999.
-
-bjet_ptsoft=0.
-bjet_pthard=0.
-bjet_etamax=999.
-
-parton_separation=0.
-
-[gen_matching]
-drmax=0.4
-mode=DR_PTMAX
-
-[JERC]
-JES=jetuncertainty_V6.root
-JER=jer_Fall15_v0.root
+[veto_muons]
+id=LOOSE_15Db
+ptmmin=10.
+etamax=2.4
 
 [loose_muons]
-id=LOOSE_15
-//ptmin=15.
+id=ANTILOOSE_15Db
+#id=LOOSE_15
+#ptmin=15.
 ptmin=0.
-//etamax=2.1
+#etamax=2.1
 etamax=3.
 
 [tight_muons]
-id=TIGHT_15
+id=TIGHT_15Db
+#id=TIGHT_15
 //ptmin=30.
 ptmin=0.
 //etamax=2.1
 etamax=3.
 
+[veto_electrons]
+id=VETO_15
+ptmin=20.0
+etascmax=2.5
+
 [loose_electrons]
-id=LOOSE_15
+id=NOTVETO_15
+#id=LOOSE_15
 //ptmin=15.
 ptmin=0.
 //etamax=2.1
 etamax=3.
 
 [tight_electrons]      
-id=MEDIUM_15
+id=TIGHT_15_NoECAL_Gap
+#id=MEDIUM_15
 //ptmin=30.
 ptmin=0.
 //etamax=2.1
 etamax=3.
 
+#[gen_jets]
+#ptmin=0.
+#etamax=999.
+#
+#[acceptance]
+#lepton_ptmin=0.
+#lepton_etamax=999.
+#
+#wjet_ptsoft=0.
+#wjet_pthard=0.
+#wjet_etamax=999.
+#
+#bjet_ptsoft=0.
+#bjet_pthard=0.
+#bjet_etamax=999.
+#
+#parton_separation=0.
+#
+[gen_matching]
+drmax=0.4
+#mode=DR_PTMAX
+mode=DR_DR
+#
+#[JERC]
+#JES=jetuncertainty_V6.root
+#JER=jer_Fall15_v0.root
+
 [jets]
-//n_min=4
+#n_min=4
 n_min=3
 ptmin=25.
-//ptmin=0.
+#ptmin=0.
 etamax=2.4
-//etamax=3.
+#etamax=3.
 applyJER=1
 
 [permutations]
@@ -76,7 +119,9 @@ hardb_pt=35.
 softb_pt=25.
 hardw_pt=25.
 softw_pt=25.
-tightb=NONE
-looseb=NONE
-ordering=mass_discriminant
+tightb=MVATIGHT
+looseb=MVALOOSE
+#tightb=NONE
+#looseb=NONE
+#ordering=mass_discriminant
 
