--- a/htt_scripts/htt_baseline_j20.cfg
+++ b/htt_scripts/htt_baseline_j20.cfg
@@ -1,8 +1,8 @@
 [general]
 skew_ttpt_distribution=0
-muon_sf=muon_sf_Moriond17_TightID_TightIso.root
+muon_sf=muon_sf_Moriond17_TightID_TightIso_PRELIMINARY.root
 electron_sf=electron_sf_Moriond17_TightCutID.root
-btag_sf=cMVAv2Moriond17.csv
+btag_sf=cMVAv2Moriond17_PRELIMINARY.csv
 btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 pseudotop=0
 
@@ -41,7 +41,7 @@ ptmin=20.
 etascmax=2.5
 
 [loose_electrons]
-id=FAKES
+id=NOTVETO_15
 ptmin=30.
 etascmax=2.1
 
