files really changed

--- a/htt_scripts/htt_baseline_j20.cfg
+++ b/htt_scripts/htt_baseline_j20.cfg
@@ -2,19 +2,26 @@
 skew_ttpt_distribution=0
 muon_sf=muon_sf_Moriond17_TightID_TightIso_PRELIMINARY.root
 electron_sf=electron_sf_Moriond17_TightCutID.root
+#btag_sf=DeepCSV_Moriond17_B_H.csv #added for deepcsv instead
+#btag_eff=htt_baselineJ20_DEEPCSVMEDIUM_DEEPCSVMEDIUM_efficiencies.root
 btag_sf=cMVAv2Moriond17_PRELIMINARY.csv
 btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 pseudotop=0
+#deepcsv_sffile=DeepCSVMoriond17_PRELIMINARY.csv #added for deepcsv instead
 
 [ttsolver]
 filename=htt_perm_baseline_j20.root
+#filename=prob_ttJets_Mar10_CSV.root
+#filename=prob_ttJets.root
+#filename=prob_ttJets_DeepCSV.root
 dirname=nosys
 btag=0
 nusolver=1
 invmass=1
 
 [event]
-MTCut=50.0
+MT=50.0
+#MTCut=50.0
 use_trig=1
 use_filters=1
 smear_met=0
@@ -63,5 +70,12 @@ hardb_pt=20.
 softb_pt=20.
 hardw_pt=20.
 softw_pt=20.
+#tightb=DEEPCSVMEDIUM
+#looseb=DEEPCSVMEDIUM
 tightb=MVAMEDIUM
 looseb=MVAMEDIUM
+
+#[JERC]
+#JER_SF=Spring16_25nsV10_MC_SF_AK4PFchs.txt
+#PT_JER=Spring16_25nsV10_MC_PtResolution_AK4PFchs.txt
+#PHI_JER=Spring16_25nsV10_MC_PhiResolution_AK4PFchs.txt
