--- a/htt_scripts/htt_baseline_j20.cfg
+++ b/htt_scripts/htt_baseline_j20.cfg
@@ -1,10 +1,11 @@
 [general]
 skew_ttpt_distribution=0
-muon_sf=muon_sf_Moriond17_TightID_TightIso_PRELIMINARY.root
+#muon_sf=muon_sf_Moriond17_TightID_TightIso_PRELIMINARY.root
+muon_sf=muon_sf_Moriond17_TightID_TightIso.root
 electron_sf=electron_sf_Moriond17_TightCutID.root
 #btag_sf=DeepCSV_Moriond17_B_H.csv #added for deepcsv instead
 #btag_eff=htt_baselineJ20_DEEPCSVMEDIUM_DEEPCSVMEDIUM_efficiencies.root
-btag_sf=cMVAv2Moriond17_PRELIMINARY.csv
+btag_sf=cMVAv2Moriond17.csv
 btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 pseudotop=0
 #deepcsv_sffile=DeepCSVMoriond17_PRELIMINARY.csv #added for deepcsv instead
