--- a/htt_scripts/htt_baseline_j20.cfg
+++ b/htt_scripts/htt_baseline_j20.cfg
@@ -1,6 +1,5 @@
 [general]
 skew_ttpt_distribution=0
-#muon_sf=muon_sf_Moriond17_TightID_TightIso_PRELIMINARY.root
 muon_sf=muon_sf_Moriond17_TightID_TightIso.root
 electron_sf=electron_sf_Moriond17_TightCutID.root
 #btag_sf=DeepCSV_Moriond17_B_H.csv #added for deepcsv instead
@@ -49,7 +48,8 @@ ptmin=20.
 etascmax=2.5
 
 [loose_electrons]
-id=NOTVETO_15
+id=FAKES
+#id=NOTVETO_15
 ptmin=30.
 etascmax=2.1
 
