created ttJets expected vals table

--- a/ttbar_reco_3J.cfg
+++ b/ttbar_reco_3J.cfg
@@ -27,12 +27,12 @@ nusolver=1
 invmass=0
 permdisc=1
 
-#[event]
-#MT=50.0
-#use_trig=0
-#use_filters=1
-#smear_met=0
-##trig_config=2015
+[event]
+MT=50.0
+use_trig=0
+use_filters=1
+smear_met=0
+#trig_config=2015
 
 [veto_muons]
 id=LOOSE_15Db
