combining 3J and resolved cases

--- a/htt_scripts/htt_baseline_j20.cfg
+++ b/htt_scripts/htt_baseline_j20.cfg
@@ -10,14 +10,18 @@ pseudotop=0
 #deepcsv_sffile=DeepCSVMoriond17_PRELIMINARY.csv #added for deepcsv instead
 
 [ttsolver]
-filename=htt_perm_baseline_j20.root
+filename=prob_htt_perm_baseline_j20_ttJetsAll.root #combining Solve and Solve_3J in TTBarSolver
+#filename=htt_perm_baseline_j20.root #original htt_simple file
 #filename=prob_ttJets_Mar10_CSV.root
 #filename=prob_ttJets.root
 #filename=prob_ttJets_DeepCSV.root
 dirname=nosys
+ptratio=0
+qarkgluon=0
 btag=0
 nusolver=1
 invmass=1
+permdisc=1
 
 [event]
 #MT=50.0
@@ -59,7 +63,8 @@ ptmin=30.
 etascmax=2.1
 
 [jets]
-n_min=4
+#n_min=3
+n_min=4 #original jet cut for htt_simple
 ptmin=20.
 etamax=2.4
 applyJER=1
