--- a/cfg_files/gen_partons.cfg
+++ b/cfg_files/gen_partons.cfg
@@ -1,12 +1,16 @@
 [general]
 skew_ttpt_distribution=0
-muon_sf=muon_sf_ICHEP2016_TightID_TightIso.root
-electron_sf=electron_sf_ICHEP2016_CutBasedTightID.root
-btag_sf=cMVAv2_ichep.csv
-btag_eff=htt_alljets_MVATIGHT_MVALOOSE_efficiencies.root
-#htt_alljets_NONE_NONE_efficiencies.root
-#htt_alljets_MVAMEDIUM_MVAMEDIUM_efficiencies.root
+muon_sf=muon_sf_Moriond17_TightID_TightIso.root
+electron_sf=electron_sf_Moriond17_TightCutID.root
+btag_sf=cMVAv2Moriond17.csv
+btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 pseudotop=0
+#muon_sf=muon_sf_ICHEP2016_TightID_TightIso.root
+#electron_sf=electron_sf_ICHEP2016_CutBasedTightID.root
+#btag_sf=cMVAv2_ichep.csv
+#btag_eff=htt_alljets_MVATIGHT_MVALOOSE_efficiencies.root
+##htt_alljets_NONE_NONE_efficiencies.root
+##htt_alljets_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 
 [ttsolver]
 filename=prob_htt_perm_baseline_j20_ttJetsAll.root
