--- a/cfg_files/jet_perm_disc.cfg
+++ b/cfg_files/jet_perm_disc.cfg
@@ -1,20 +1,19 @@
-#[general]
-#skew_ttpt_distribution=0
-#muon_sf=muon_sf_Moriond16_25ns_TightID_TrkIso.root
-#electron_sf=electron_sf_Moriond16_CutBasedMedID_NOTRG.root
-#btag_sf=CSVv2_76X_preliminary.csv
-#btag_eff=btag_general_efficiencies.root
-#pseudotop=0
-
 [general]
 skew_ttpt_distribution=0
-muon_sf=muon_sf_ICHEP2016_TightID_TightIso.root
-electron_sf=electron_sf_ICHEP2016_CutBasedTightID.root
-btag_sf=cMVAv2_ichep.csv
-btag_eff=htt_alljets_MVATIGHT_MVALOOSE_efficiencies.root
-#htt_alljets_NONE_NONE_efficiencies.root
-#htt_alljets_MVAMEDIUM_MVAMEDIUM_efficiencies.root
+muon_sf=muon_sf_Moriond17_TightID_TightIso.root
+electron_sf=electron_sf_Moriond17_TightCutID.root
+#btag_sf=DeepCSV_Moriond17_B_H.csv #added for deepcsv instead
+#btag_eff=htt_baselineJ20_DEEPCSVMEDIUM_DEEPCSVMEDIUM_efficiencies.root
+btag_sf=cMVAv2Moriond17.csv
+btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 pseudotop=0
+
+#muon_sf=muon_sf_ICHEP2016_TightID_TightIso.root
+#electron_sf=electron_sf_ICHEP2016_CutBasedTightID.root
+#btag_sf=cMVAv2_ichep.csv
+#btag_eff=htt_alljets_MVATIGHT_MVALOOSE_efficiencies.root
+##htt_alljets_NONE_NONE_efficiencies.root
+##htt_alljets_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 
 [ttsolver]
 #filename=prob_ttJetsAll.root
@@ -27,12 +26,12 @@ nusolver=1
 invmass=0
 permdisc=1
 
-#[event]
-#MT=50.0
-#use_trig=0
-#use_filters=1
-#smear_met=0
-##trig_config=2015
+[event]
+MT=50.0
+use_trig=1
+use_filters=1
+smear_met=0
+#trig_config=2015
 
 [veto_muons]
 id=LOOSE_15Db
@@ -61,7 +60,7 @@ ptmin=20.0
 etascmax=2.5
 
 [loose_electrons]
-id=NOTVETO_15
+id=FAKES
 #id=LOOSE_15
 //ptmin=15.
 ptmin=0.
@@ -118,12 +117,12 @@ applyJER=1
 [permutations]
 max_jets=600
 max_bjets=0
-hardb_pt=35.
-softb_pt=25.
-hardw_pt=25.
-softw_pt=25.
-tightb=MVATIGHT
-looseb=MVALOOSE
+hardb_pt=20.
+softb_pt=20.
+hardw_pt=20.
+softw_pt=20.
+tightb=MVAMEDIUM
+looseb=MVAMEDIUM
 #tightb=NONE
 #looseb=NONE
 #ordering=mass_discriminant
