--- a/cfg_files/ttbar_reco_3J.cfg
+++ b/cfg_files/ttbar_reco_3J.cfg
@@ -1,20 +1,20 @@
-#[general]
-#skew_ttpt_distribution=0
-#muon_sf=muon_sf_Moriond16_25ns_TightID_TrkIso.root
-#electron_sf=electron_sf_Moriond16_CutBasedMedID_NOTRG.root
-#btag_sf=CSVv2_76X_preliminary.csv
-#btag_eff=btag_general_efficiencies.root
-#pseudotop=0
-
 [general]
 skew_ttpt_distribution=0
-muon_sf=muon_sf_ICHEP2016_TightID_TightIso.root
-electron_sf=electron_sf_ICHEP2016_CutBasedTightID.root
-btag_sf=cMVAv2_ichep.csv
-btag_eff=htt_alljets_MVATIGHT_MVALOOSE_efficiencies.root
-#htt_alljets_NONE_NONE_efficiencies.root
-#htt_alljets_MVAMEDIUM_MVAMEDIUM_efficiencies.root
-pseudotop=0
+muon_sf=muon_sf_Moriond17_TightID_TightIso.root
+electron_sf=electron_sf_Moriond17_TightCutID.root
+#btag_sf=DeepCSV_Moriond17_B_H.csv #added for deepcsv instead
+#btag_eff=htt_baselineJ20_DEEPCSVMEDIUM_DEEPCSVMEDIUM_efficiencies.root
+btag_sf=cMVAv2Moriond17.csv
+btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root
+
+
+#muon_sf=muon_sf_ICHEP2016_TightID_TightIso.root
+#electron_sf=electron_sf_ICHEP2016_CutBasedTightID.root
+#btag_sf=cMVAv2_ichep.csv
+#btag_eff=htt_alljets_MVATIGHT_MVALOOSE_efficiencies.root
+##htt_alljets_NONE_NONE_efficiencies.root
+##htt_alljets_MVAMEDIUM_MVAMEDIUM_efficiencies.root
+#pseudotop=0
 
 [ttsolver]
 #filename=prob_ttJetsAll.root
@@ -55,7 +55,7 @@ ptmin=20.0
 etascmax=2.5
 
 [loose_electrons]
-id=NOTVETO_15
+id=FAKES
 ptmin=30.
 etascmax=2.1
 
@@ -64,24 +64,6 @@ id=TIGHT_15_NoECAL_Gap
 ptmin=30.
 etascmax=2.1
 
-#[gen_jets]
-#ptmin=0.
-#etamax=999.
-#
-#[acceptance]
-#lepton_ptmin=0.
-#lepton_etamax=999.
-#
-#wjet_ptsoft=0.
-#wjet_pthard=0.
-#wjet_etamax=999.
-#
-#bjet_ptsoft=0.
-#bjet_pthard=0.
-#bjet_etamax=999.
-#
-#parton_separation=0.
-#
 [gen_matching]
 drmax=0.4
 #mode=DR_PTMAX
@@ -102,15 +84,15 @@ etamax=2.4
 applyJER=1
 
 [permutations]
-#max_jets=600
-#max_bjets=0
-#hardb_pt=35.
-#softb_pt=25.
-#hardw_pt=25.
-#softw_pt=25.
-#tightb=MVATIGHT
-#looseb=MVALOOSE
-tightb=NONE
-looseb=NONE
+max_jets=600
+max_bjets=0
+hardb_pt=20.
+softb_pt=20.
+hardw_pt=20.
+softw_pt=20.
+tightb=MVAMEDIUM
+looseb=MVAMEDIUM
+#tightb=NONE
+#looseb=NONE
 ordering=mass_discriminant
 
