First commit to adding lost jet case.

--- a/cfg_files/htt_baseline_j20.cfg
+++ b/cfg_files/htt_baseline_j20.cfg
@@ -80,7 +80,7 @@ softw_pt=20.
 tightb=MVAMEDIUM
 looseb=MVAMEDIUM
 
-#[JERC]
-#JER_SF=Spring16_25nsV10_MC_SF_AK4PFchs.txt
-#PT_JER=Spring16_25nsV10_MC_PtResolution_AK4PFchs.txt
-#PHI_JER=Spring16_25nsV10_MC_PhiResolution_AK4PFchs.txt
+[JERC]
+JER_SF=Spring16_25nsV10_MC_SF_AK4PFchs.txt
+PT_JER=Spring16_25nsV10_MC_PtResolution_AK4PFchs.txt
+PHI_JER=Spring16_25nsV10_MC_PhiResolution_AK4PFchs.txt
