--- a/cfg_files/ttbar_reco_3J.cfg
+++ b/cfg_files/ttbar_reco_3J.cfg
@@ -18,7 +18,8 @@ btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 
 [ttsolver]
 #filename=prob_ttJetsAll.root
-filename=prob_htt_perm_baseline_j20_ttJetsAll.root
+#filename=prob_htt_perm_baseline_j20_ttJetsAll.root # only includes merged event distributions
+filename=prob_htt_perm_baseline_j20_ttJets_3J.root # includes all 3 jet events distributions (merged and lost)
 dirname=nosys
 ptratio=0
 qarkgluon=0
