Made changes to variable names wrt lost and merged 3 jet events.

--- a/cfg_files/htt_baseline_j20.cfg
+++ b/cfg_files/htt_baseline_j20.cfg
@@ -10,7 +10,8 @@ pseudotop=0
 #deepcsv_sffile=DeepCSVMoriond17_PRELIMINARY.csv #added for deepcsv instead
 
 [ttsolver]
-filename=prob_htt_perm_baseline_j20_ttJetsAll.root #combining Solve and Solve_3J in TTBarSolver
+#filename=prob_htt_perm_baseline_j20_ttJetsAll.root #combining Solve and Solve_3J in TTBarSolver
+filename=prob_htt_perm_baseline_j20_ttJets_3J.root #combining resolved 4+jet and all 3 jet events in TTBarSolver
 #filename=htt_perm_baseline_j20.root #original htt_simple file
 #filename=prob_ttJets_Mar10_CSV.root
 #filename=prob_ttJets.root
@@ -21,7 +22,8 @@ qarkgluon=0
 btag=0
 nusolver=1
 invmass=1
-permdisc=1
+merged_3J=1
+lost_3J
 
 [event]
 #MT=50.0
