Changes to make Lost and Merged L distributions

--- a/cfg_files/ttbar_reco_3J.cfg
+++ b/cfg_files/ttbar_reco_3J.cfg
@@ -19,7 +19,8 @@ btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 [ttsolver]
 #filename=prob_ttJetsAll.root
 #filename=prob_htt_perm_baseline_j20_ttJetsAll.root # only includes merged event distributions
-filename=prob_htt_perm_baseline_j20_ttJets_3J.root # includes all 3 jet events distributions (merged and lost)
+filename=prob_test.root # includes all 3 jet events distributions (merged and lost)
+#filename=prob_htt_perm_baseline_j20_ttJets_3J.root # includes all 3 jet events distributions (merged and lost)
 dirname=nosys
 ptratio=0
 qarkgluon=0
@@ -27,7 +28,7 @@ btag=0
 nusolver=1
 invmass=0
 merged_3J=1
-lost_3J = 0
+lost_3J=1
 
 [event]
 MT=50.0
