--- a/htt_scripts/htt_baseline.cfg
+++ b/htt_scripts/htt_baseline.cfg
@@ -7,11 +7,14 @@ btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 pseudotop=0
 
 [ttsolver]
-filename=htt_perm_baseline_j20.root
+#filename=htt_perm_baseline_j20.root
+filename=prob_htt_perm_baseline_j20_ttJets_3J.root # includes resolved 4+ jet events and all 3 jet events distributions (merged and lost)
 dirname=nosys
 btag=0
 nusolver=1
 invmass=1
+merged_3J=1
+lost_3J=1
 
 [event]
 MT=50.0
