--- a/ctag_scripts/ctag_eff.cfg
+++ b/ctag_scripts/ctag_eff.cfg
@@ -14,7 +14,8 @@ muon_sf=muon_sf_Moriond17_TightID_TightIso_PRELIMINARY.root
 electron_sf=electron_sf_Moriond17_TightCutID.root
 
 [ttsolver]
-filename=ctag_eff_permutations.root
+#filename=ctag_eff_permutations.root
+filename=ttJets_CTag2017.root
 dirname=nosys
 btag=0
 nusolver=0
