Changed CSV WPs to older values.

--- a/ctag_scripts/ctag_eff.cfg
+++ b/ctag_scripts/ctag_eff.cfg
@@ -1,10 +1,12 @@
 [general]
 skew_ttpt_distribution=0
 btag_sf=CSVv2Moriond17_PRELIMINARY.csv
-btag_eff=ctageff_ttsel_CSVTIGHT_CSVLOOSE_efficiencies.root
+btag_eff=ctageff_ttsel_DEEPCSVTIGHT_DEEPCSVLOOSE_efficiencies.root
+#btag_eff=ctageff_ttsel_CSVTIGHT_CSVLOOSE_efficiencies.root
 pseudotop=0
 csv_sffile=CSVv2Moriond17_PRELIMINARY.csv
-wjets_efficiencies=ctageff_wjets_efficiencies_CSVTIGHT_CSVLOOSE.root
+wjets_efficiencies=ctageff_wjets_efficiencies_DEEPCSVTIGHT_DEEPCSVLOOSE.root
+#wjets_efficiencies=ctageff_wjets_efficiencies_CSVTIGHT_CSVLOOSE.root
 cmva_sffile=cMVAv2Moriond17_PRELIMINARY.csv
 deepcsv_sffile=DeepCSVMoriond17_PRELIMINARY.csv
 ctag_sffile=CTaggerMoriond17_PRELIMINARY.csv
@@ -15,7 +17,8 @@ electron_sf=electron_sf_Moriond17_TightCutID.root
 
 [ttsolver]
 #filename=ctag_eff_permutations.root
-filename=ttJets_CTag2017.root
+#filename=ttJets_CTag2017.root
+filename=ctag_eff_permutations_2018.root
 dirname=nosys
 btag=0
 nusolver=0
@@ -71,5 +74,7 @@ looseb=NONE
 ordering=mass_discriminant
 
 [best_permutation]
-tightb=CSVTIGHT
-looseb=CSVLOOSE
+tightb=DEEPCSVTIGHT
+looseb=DEEPCSVLOOSE
+#tightb=CSVTIGHT
+#looseb=CSVLOOSE
