--- a/ctag_scripts/ctag_eff.cfg
+++ b/ctag_scripts/ctag_eff.cfg
@@ -1,15 +1,15 @@
 [general]
 skew_ttpt_distribution=0
 
-#    ## CSV files
-#btag_sf=CSVv2Moriond18_PRELIMINARY.csv
-#btag_eff=ctageff_ttsel_CSVTIGHT_CSVLOOSE_efficiencies.root
-#wjets_efficiencies=ctageff_wjets_efficiencies_CSVTIGHT_CSVLOOSE.root
+    ## CSV files
+btag_sf=CSVv2Moriond18_PRELIMINARY.csv
+btag_eff=ctageff_ttsel_CSVTIGHT_CSVLOOSE_efficiencies.root
+wjets_efficiencies=ctageff_wjets_efficiencies_CSVTIGHT_CSVLOOSE.root
 
-    ## DeepCSV files
-btag_sf=DeepCSVMoriond18_PRELIMINARY.csv
-btag_eff=ctageff_ttsel_DEEPCSVTIGHT_DEEPCSVLOOSE_efficiencies.root
-wjets_efficiencies=ctageff_wjets_efficiencies_DEEPCSVTIGHT_DEEPCSVLOOSE.root
+#    ## DeepCSV files
+#btag_sf=DeepCSVMoriond18_PRELIMINARY.csv
+#btag_eff=ctageff_ttsel_DEEPCSVTIGHT_DEEPCSVLOOSE_efficiencies.root
+#wjets_efficiencies=ctageff_wjets_efficiencies_DEEPCSVTIGHT_DEEPCSVLOOSE.root
 
 pseudotop=0
 csv_sffile=CSVv2Moriond18_PRELIMINARY.csv
@@ -81,7 +81,7 @@ looseb=NONE
 ordering=mass_discriminant
 
 [best_permutation]
-tightb=DEEPCSVTIGHT
-looseb=DEEPCSVLOOSE
-#tightb=CSVTIGHT
-#looseb=CSVLOOSE
+#tightb=DEEPCSVTIGHT
+#looseb=DEEPCSVLOOSE
+tightb=CSVTIGHT
+looseb=CSVLOOSE
