Final changes to 2017 SF campaign.

--- a/ctag_scripts/ctag_eff.cfg
+++ b/ctag_scripts/ctag_eff.cfg
@@ -1,21 +1,23 @@
 [general]
 skew_ttpt_distribution=0
 
-    ## CSV files
-btag_sf=CSVv2Moriond18_PRELIMINARY.csv
-btag_eff=ctageff_ttsel_CSVTIGHT_CSVLOOSE_efficiencies.root
-wjets_efficiencies=ctageff_wjets_efficiencies_CSVTIGHT_CSVLOOSE.root
+#    ## CSV files
+#btag_sf=CSVv2Moriond18_PRELIMINARY.csv
+#btag_eff=ctageff_ttsel_CSVTIGHT_CSVLOOSE_efficiencies.root
+#wjets_efficiencies=ctageff_wjets_efficiencies_CSVTIGHT_CSVLOOSE.root
 
-#    ## DeepCSV files
-#btag_sf=DeepCSVMoriond18_PRELIMINARY.csv
-#btag_eff=ctageff_ttsel_DEEPCSVTIGHT_DEEPCSVLOOSE_efficiencies.root
-#wjets_efficiencies=ctageff_wjets_efficiencies_DEEPCSVTIGHT_DEEPCSVLOOSE.root
+    ## DeepCSV files
+btag_sf=DeepCSVMoriond18_PRELIMINARY.csv
+btag_eff=ctageff_ttsel_DEEPCSVTIGHT_DEEPCSVLOOSE_efficiencies.root
+wjets_efficiencies=ctageff_wjets_efficiencies_DEEPCSVTIGHT_DEEPCSVLOOSE.root
 
 pseudotop=0
 csv_sffile=CSVv2Moriond18_PRELIMINARY.csv
 deepcsv_sffile=DeepCSVMoriond18_PRELIMINARY.csv
 #cmva_sffile=cMVAv2Moriond17_PRELIMINARY.csv
 ctag_sffile=CTaggerMoriond17_PRELIMINARY.csv
+#ctag_sffile=CTaggerMoriond18_PRELIMINARY.csv
+deepctag_sffile=DeepCTaggerMoriond18_PRELIMINARY.csv
 apply_trigger=0
 
 muon_sf=muon_sf_Moriond18_TightID_TightIso_RunBCDEF_PRELIMINARY.root
@@ -81,7 +83,7 @@ looseb=NONE
 ordering=mass_discriminant
 
 [best_permutation]
-#tightb=DEEPCSVTIGHT
-#looseb=DEEPCSVLOOSE
-tightb=CSVTIGHT
-looseb=CSVLOOSE
+tightb=DEEPCSVTIGHT
+looseb=DEEPCSVLOOSE
+#tightb=CSVTIGHT
+#looseb=CSVLOOSE
