--- a/ctag_scripts/ctag_eff.cfg
+++ b/ctag_scripts/ctag_eff.cfg
@@ -1,33 +1,47 @@
 [general]
 skew_ttpt_distribution=0
+## recreate 2016 results attempt
+btag_sf=CSVv2Moriond17_PRELIMINARY.csv
+btag_eff=ctageff_ttsel_CSVTIGHT_CSVLOOSE_efficiencies.root
+pseudotop=0
+csv_sffile=CSVv2Moriond17_PRELIMINARY.csv
+wjets_efficiencies=ctageff_wjets_efficiencies_CSVTIGHT_CSVLOOSE.root
+cmva_sffile=cMVAv2Moriond17_PRELIMINARY.csv
+deepcsv_sffile=DeepCSVMoriond17_PRELIMINARY.csv
+ctag_sffile=CTaggerMoriond17_PRELIMINARY.csv
+apply_trigger=0
+muon_sf=muon_sf_Moriond17_TightID_TightIso_PRELIMINARY.root
+electron_sf=electron_sf_Moriond17_TightCutID.root
+##
+
 
 #    ## CSV files
 #btag_sf=CSVv2Moriond18_PRELIMINARY.csv
 #btag_eff=ctageff_ttsel_CSVTIGHT_CSVLOOSE_efficiencies.root
 #wjets_efficiencies=ctageff_wjets_efficiencies_CSVTIGHT_CSVLOOSE.root
 
-    ## DeepCSV files
-btag_sf=DeepCSVMoriond18_PRELIMINARY.csv
-btag_eff=ctageff_ttsel_DEEPCSVTIGHT_DEEPCSVLOOSE_efficiencies.root
-wjets_efficiencies=ctageff_wjets_efficiencies_DEEPCSVTIGHT_DEEPCSVLOOSE.root
-
-pseudotop=0
-csv_sffile=CSVv2Moriond18_PRELIMINARY.csv
-deepcsv_sffile=DeepCSVMoriond18_PRELIMINARY.csv
-#cmva_sffile=cMVAv2Moriond17_PRELIMINARY.csv
-ctag_sffile=CTaggerMoriond17_PRELIMINARY.csv
-#ctag_sffile=CTaggerMoriond18_PRELIMINARY.csv
-deepctag_sffile=DeepCTaggerMoriond18_PRELIMINARY.csv
-apply_trigger=0
-
-muon_sf=muon_sf_Moriond18_TightID_TightIso_RunBCDEF_PRELIMINARY.root
-#muon_sf=muon_sf_Moriond17_TightID_TightIso_PRELIMINARY.root
-electron_sf=electron_sf_Moriond17_TightCutID.root
+#    ## DeepCSV files
+#btag_sf=DeepCSVMoriond18_PRELIMINARY.csv
+#btag_eff=ctageff_ttsel_DEEPCSVTIGHT_DEEPCSVLOOSE_efficiencies.root
+#wjets_efficiencies=ctageff_wjets_efficiencies_DEEPCSVTIGHT_DEEPCSVLOOSE.root
+#
+#pseudotop=0
+#csv_sffile=CSVv2Moriond18_PRELIMINARY.csv
+#deepcsv_sffile=DeepCSVMoriond18_PRELIMINARY.csv
+##cmva_sffile=cMVAv2Moriond17_PRELIMINARY.csv
+#ctag_sffile=CTaggerMoriond17_PRELIMINARY.csv
+##ctag_sffile=CTaggerMoriond18_PRELIMINARY.csv
+#deepctag_sffile=DeepCTaggerMoriond18_PRELIMINARY.csv
+#apply_trigger=0
+#
+#muon_sf=muon_sf_Moriond18_TightID_TightIso_RunBCDEF_PRELIMINARY.root
+##muon_sf=muon_sf_Moriond17_TightID_TightIso_PRELIMINARY.root
+#electron_sf=electron_sf_Moriond17_TightCutID.root
 
 [ttsolver]
-#filename=ctag_eff_permutations.root
+filename=ctag_eff_permutations.root
 #filename=ttJets_CTag2017.root
-filename=ctag_eff_permutations_2018.root #files in different jobids might be different
+#filename=ctag_eff_permutations_2018.root #files in different jobids might be different
 dirname=nosys
 btag=0
 nusolver=0
@@ -83,7 +97,7 @@ looseb=NONE
 ordering=mass_discriminant
 
 [best_permutation]
-tightb=DEEPCSVTIGHT
-looseb=DEEPCSVLOOSE
-#tightb=CSVTIGHT
-#looseb=CSVLOOSE
+#tightb=DEEPCSVTIGHT
+#looseb=DEEPCSVLOOSE
+tightb=CSVTIGHT
+looseb=CSVLOOSE
