--- a/ctag_scripts/ctag_eff.cfg
+++ b/ctag_scripts/ctag_eff.cfg
@@ -39,7 +39,8 @@ electron_sf=electron_sf_Moriond17_TightCutID.root
 #electron_sf=electron_sf_Moriond17_TightCutID.root
 
 [ttsolver]
-filename=ctag_eff_permutations.root
+#filename=ctag_eff_permutations.root
+filename=ctag_eff_Permutations_2016.root 
 #filename=ttJets_CTag2017.root
 #filename=ctag_eff_permutations_2018.root #files in different jobids might be different
 dirname=nosys
