Restructured ttbar reconstruction files for 3-jet events

--- a/cfg_files/ttbar_reco_3J.cfg
+++ b/cfg_files/ttbar_reco_3J.cfg
@@ -14,12 +14,12 @@ btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 #btag_eff=htt_alljets_MVATIGHT_MVALOOSE_efficiencies.root
 ##htt_alljets_NONE_NONE_efficiencies.root
 ##htt_alljets_MVAMEDIUM_MVAMEDIUM_efficiencies.root
-#pseudotop=0
+pseudotop=0
 
 [ttsolver]
 #filename=prob_ttJetsAll.root
-#filename=prob_htt_perm_baseline_j20_ttJetsAll.root # only includes merged event distributions
-filename=prob_test.root # includes all 3 jet events distributions (merged and lost)
+filename=prob_htt_perm_baseline_j20_ttJetsAll.root # merged and lost 3-jet events as well as resolved event distributions
+#filename=prob_test.root # includes all 3 jet events distributions (merged and lost)
 #filename=prob_htt_perm_baseline_j20_ttJets_3J.root # includes all 3 jet events distributions (merged and lost)
 dirname=nosys
 ptratio=0
@@ -82,9 +82,10 @@ drval=0.4
 [jets]
 #n_min=4
 n_min=3
-ptmin=20.
+ptmin=30.
 etamax=2.4
 applyJER=1
+lead_ptmin=50.
 
 [permutations]
 max_jets=600
