Added 3-jet reconstruction using alpha to 4+ jet reco

--- a/cfg_files/htt_baseline_j20.cfg
+++ b/cfg_files/htt_baseline_j20.cfg
@@ -5,13 +5,15 @@ electron_sf=electron_sf_Moriond17_TightCutID.root
 #btag_sf=DeepCSV_Moriond17_B_H.csv #added for deepcsv instead
 #btag_eff=htt_baselineJ20_DEEPCSVMEDIUM_DEEPCSVMEDIUM_efficiencies.root
 btag_sf=cMVAv2Moriond17.csv
-btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root
+#btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root # original file using MVAMEDIUM
+btag_eff=htt_baselineJ20_3jets_CSVMEDIUM_CSVMEDIUM_efficiencies.root # to be used with 3 or more jets
 pseudotop=0
 #deepcsv_sffile=DeepCSVMoriond17_PRELIMINARY.csv #added for deepcsv instead
 
 [ttsolver]
-#filename=prob_htt_perm_baseline_j20_ttJetsAll.root #combining Solve and Solve_3J in TTBarSolver
-filename=prob_htt_perm_baseline_j20_ttJets_3J.root #combining resolved 4+jet and all 3 jet events in TTBarSolver
+#filename=prob_htt_perm_baseline_j20_ttJetsAll.root #combines 3J and 4+ jet dists from ttJetsM0, ttJetsM700, ttJetsM1000 in TTBarSolver
+filename=prob_htt_perm_baseline_j20_ttJets.root #combines 3J and 4+ jet dists from ttJets in TTBarSolver
+#filename=prob_htt_perm_baseline_j20_ttJets_3J.root #combining resolved 4+jet and all 3 jet events in TTBarSolver
 #filename=htt_perm_baseline_j20.root #original htt_simple file
 #filename=prob_ttJets_Mar10_CSV.root
 #filename=prob_ttJets.root
@@ -23,10 +25,9 @@ btag=0
 nusolver=1
 invmass=1
 merged_3J=1
-lost_3J
+lost_3J=1
 
 [event]
-#MT=50.0
 MTCut=50.0
 use_trig=1
 use_filters=1
@@ -63,10 +64,21 @@ id=TIGHT_15_NoECAL_Gap
 ptmin=30.
 etascmax=2.1
 
+[gen_matching]
+drmax=0.4
+#mode=DR_PTMAX
+mode=DR_DR
+
+[DR_gen_matching] #uses DR_TTGenMatcher
+drval=0.4
+
 [jets]
 n_min=3 #needed for 3J category
 #n_min=4 #original jet cut for htt_simple
 ptmin=20.
+lead_ptmin=0.
+#ptmin=30.
+#lead_ptmin=50.
 etamax=2.4
 applyJER=1
 
@@ -77,10 +89,16 @@ hardb_pt=20.
 softb_pt=20.
 hardw_pt=20.
 softw_pt=20.
-#tightb=DEEPCSVMEDIUM
-#looseb=DEEPCSVMEDIUM
-tightb=MVAMEDIUM
-looseb=MVAMEDIUM
+tightb=CSVMEDIUM
+looseb=CSVMEDIUM
+#tightb=MVAMEDIUM
+#looseb=MVAMEDIUM
+
+[best_permutation]
+tightb=CSVMEDIUM 
+looseb=CSVMEDIUM
+
+
 
 [JERC]
 JER_SF=Spring16_25nsV10_MC_SF_AK4PFchs.txt
