--- a/cfg_files/ttbar_reco_3J.cfg
+++ b/cfg_files/ttbar_reco_3J.cfg
@@ -31,7 +31,7 @@ merged_3J=1
 lost_3J=1
 
 [event]
-MT=50.0
+MTCut=50.0
 use_trig=0
 use_filters=1
 smear_met=0
@@ -39,7 +39,7 @@ smear_met=0
 
 [veto_muons]
 id=LOOSE_15Db
-ptmmin=10.
+ptmin=10.
 etamax=2.4
 
 [loose_muons]
