--- a/cfg_files/htt_baseline_j30.cfg
+++ b/cfg_files/htt_baseline_j30.cfg
@@ -7,13 +7,13 @@ electron_sf=electron_sf_Moriond17_TightCutID.root
 #btag_sf=cMVAv2Moriond17.csv
 #btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root # original file using MVAMEDIUM
 btag_sf=CSVv2_Moriond17_B_H.csv
-btag_eff=htt_baselineJ20_3jets_CSVMEDIUM_CSVMEDIUM_efficiencies.root # to be used with 3 or more jets
+btag_eff=htt_baselineJ30_3jets_CSVMEDIUM_CSVMEDIUM_efficiencies.root # to be used with 3 or more jets
 pseudotop=0
 #deepcsv_sffile=DeepCSVMoriond17_PRELIMINARY.csv #added for deepcsv instead
 
 [ttsolver]
 #filename=prob_htt_perm_baseline_j20_ttJetsAll.root #combines 3J and 4+ jet dists from ttJetsM0, ttJetsM700, ttJetsM1000 in TTBarSolver
-filename=prob_htt_perm_baseline_j20_ttJets.root #combines 3J and 4+ jet dists from ttJets in TTBarSolver
+filename=prob_htt_perm_baseline_j30_ttJets.root #combines 3J and 4+ jet dists from ttJets in TTBarSolver
 #filename=prob_htt_perm_baseline_j20_ttJets_3J.root #combining resolved 4+jet and all 3 jet events in TTBarSolver
 #filename=htt_perm_baseline_j20.root #original htt_simple file
 dirname=nosys
@@ -26,8 +26,7 @@ merged_3J=1
 lost_3J=1
 
 [event]
-#MTCut=50.0
-MTCut=0.0
+MTCut=50.0
 use_trig=1
 use_filters=1
 smear_met=0
@@ -74,10 +73,10 @@ drval=0.4
 [jets]
 n_min=3 #needed for 3J category
 #n_min=4 #original jet cut for htt_simple
-ptmin=20.
-lead_ptmin=0.
-#ptmin=30.
-#lead_ptmin=50.
+#ptmin=20.
+#lead_ptmin=0.
+ptmin=30.
+lead_ptmin=50.
 etamax=2.4
 applyJER=1
 
@@ -92,6 +91,8 @@ tightb=CSVMEDIUM
 looseb=CSVMEDIUM
 #tightb=MVAMEDIUM
 #looseb=MVAMEDIUM
+#tightb=DEEPCSVMEDIUM
+#looseb=DEEPCSVMEDIUM
 
 [best_permutation]
 tightb=CSVMEDIUM 
