Complete overhaul. Added event reweighting+SFs to ttbar analysis, abcd qcd est. to Htt

--- a/cfg_files/ttbar_reco_3J_j20l0.cfg
+++ b/cfg_files/ttbar_reco_3J_j20l0.cfg
@@ -4,16 +4,13 @@ muon_sf=muon_sf_Moriond17_TightID_TightIso.root
 electron_sf=electron_sf_Moriond17_TightCutID.root
 #btag_sf=DeepCSV_Moriond17_B_H.csv #added for deepcsv instead
 #btag_eff=htt_baselineJ20_DEEPCSVMEDIUM_DEEPCSVMEDIUM_efficiencies.root
-#btag_sf=cMVAv2Moriond17.csv
-#btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root # original file using MVAMEDIUM
 btag_sf=CSVv2_Moriond17_B_H.csv
-btag_eff=htt_baselineJ20L0_ttJets_CSVMEDIUM_CSVMEDIUM_efficiencies.root # to be used with 3+ jets, made from ttJets with ptmin=20, lead_ptmiin=0 
+btag_eff=htt_baselineJ20L0_ttJets_CSVMEDIUM_CSVMEDIUM_efficiencies.root # to be used with 3+ jets, made from ttJets with ptmin=20, lead_ptmiin=0
 pseudotop=0
-#deepcsv_sffile=DeepCSVMoriond17_PRELIMINARY.csv #added for deepcsv instead
 
 [ttsolver]
-filename=prob_htt_perm_baseline_j20l0_ttJets.root #combines 3J and 4+ jet dists from ttJets in TTBarSolver for ptmin=20, lead_ptmin=0
-#filename=htt_perm_baseline_j20.root #original htt_simple file
+filename=prob_ttJetsM_All_j20l0.root # merged and lost 3-jet events as well as resolved event distributions from ttJetsM0, M700, M1000 files
+#filename=prob_htt_perm_baseline_j20_ttJets_3J.root # includes all 3 jet events distributions (merged and lost)
 dirname=nosys
 ptratio=0
 qarkgluon=0
@@ -24,8 +21,7 @@ merged_3J=1
 lost_3J=1
 
 [event]
-#MTCut=50.0
-MTCut=0.0 # only for htt_simple
+MTCut=50.0
 use_trig=1
 use_filters=1
 smear_met=0
@@ -37,7 +33,7 @@ ptmin=10.
 etamax=2.4
 
 [loose_muons]
-id=ANTILOOSE_15Db 
+id=ANTILOOSE_15Db
 ptmin=26.
 etamax=2.4
 
@@ -48,7 +44,7 @@ etamax=2.4
 
 [veto_electrons]
 id=VETO_15
-ptmin=20.
+ptmin=20.0
 etascmax=2.5
 
 [loose_electrons]
@@ -65,17 +61,21 @@ etascmax=2.1
 drmax=0.4
 #mode=DR_PTMAX
 mode=DR_DR
+#
+#[JERC]
+#JES=jetuncertainty_V6.root
+#JER=jer_Fall15_v0.root
 
 [DR_gen_matching] #uses DR_TTGenMatcher
 drval=0.4
 
 [jets]
-n_min=3 #needed for 3J category
-#n_min=4 #original jet cut for htt_simple
+#n_min=4
+n_min=3
 ptmin=20.
-lead_ptmin=0.
 etamax=2.4
 applyJER=1
+lead_ptmin=0.
 
 [permutations]
 max_jets=600
@@ -86,17 +86,9 @@ hardw_pt=20.
 softw_pt=20.
 tightb=CSVMEDIUM
 looseb=CSVMEDIUM
-#tightb=MVAMEDIUM
-#looseb=MVAMEDIUM
-
-[best_permutation]
-tightb=CSVMEDIUM 
-looseb=CSVMEDIUM
-
-[JERC]
-JER_SF=Spring16_25nsV10_MC_SF_AK4PFchs.txt
-PT_JER=Spring16_25nsV10_MC_PtResolution_AK4PFchs.txt
-PHI_JER=Spring16_25nsV10_MC_PhiResolution_AK4PFchs.txt
+#tightb=NONE
+#looseb=NONE
+ordering=mass_discriminant
 
 [alpha_correction] ## taken from fit_parameters.json for http://home.fnal.gov/~jdulemba/Plots/ttbar_reco_3J/2018/JetpTcut20/LeadPt0/Only_Alpha_Correction/Full/ttJetsM0/3J_Event_Plots/Lost_BP/Alpha_Correction/fit_parameters.json
 ## only valid for ptmin=20,etamax=2.4,lead_ptmin=0
