--- a/cfg_files/gen_partons.cfg
+++ b/cfg_files/gen_partons.cfg
@@ -2,8 +2,11 @@
 skew_ttpt_distribution=0
 muon_sf=muon_sf_Moriond17_TightID_TightIso.root
 electron_sf=electron_sf_Moriond17_TightCutID.root
-btag_sf=cMVAv2Moriond17.csv
-btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root
+
+btag_sf=CSVv2_Moriond17_B_H.csv
+btag_eff=htt_baselineJ20_3jets_CSVMEDIUM_CSVMEDIUM_efficiencies.root # to be used with 3 or more jets
+#btag_sf=cMVAv2Moriond17.csv
+#btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 pseudotop=0
 #muon_sf=muon_sf_ICHEP2016_TightID_TightIso.root
 #electron_sf=electron_sf_ICHEP2016_CutBasedTightID.root
@@ -13,14 +16,16 @@ pseudotop=0
 ##htt_alljets_MVAMEDIUM_MVAMEDIUM_efficiencies.root
 
 [ttsolver]
-filename=prob_htt_perm_baseline_j20_ttJetsAll.root
+#filename=prob_htt_perm_baseline_j20_ttJetsAll.root
+filename=prob_htt_perm_baseline_j20_ttJets.root #combines 3J and 4+ jet dists from ttJets in TTBarSolver
 dirname=nosys
 ptratio=0
 qarkgluon=0
 btag=0
 nusolver=1
 invmass=1
-permdisc=1
+merged_3J=1
+lost_3J=1
 
 [event]
 MTCut=50.0
@@ -63,19 +68,25 @@ etamax=2.1
 drmax=0.4
 #mode=DR_PTMAX
 mode=DR_DR
-#
-#[JERC]
-#JES=jetuncertainty_V6.root
-#JER=jer_Fall15_v0.root
+
+[DR_gen_matching] #uses DR_TTGenMatcher
+drval=0.4
 
 [jets]
 #n_min=4
 n_min=0
 #ptmin=20.
 ptmin=0.
+lead_ptmin=0.
 #etamax=2.4
 etamax=5.0
 applyJER=1
+
+[gen_jets]
+ptmin=20.
+etamax=2.4
+lead_ptmin=0.
+
 
 [permutations]
 max_jets=600
@@ -84,9 +95,20 @@ hardb_pt=20.
 softb_pt=20.
 hardw_pt=20.
 softw_pt=20.
-tightb=MVAMEDIUM
-looseb=MVAMEDIUM
-#tightb=NONE
-#looseb=NONE
+#tightb=MVAMEDIUM
+#looseb=MVAMEDIUM
+tightb=CSVMEDIUM
+looseb=CSVMEDIUM
 #ordering=mass_discriminant
+
+[best_permutation]
+tightb=CSVMEDIUM 
+looseb=CSVMEDIUM
+
+
+[JERC]
+JER_SF=Spring16_25nsV10_MC_SF_AK4PFchs.txt
+PT_JER=Spring16_25nsV10_MC_PtResolution_AK4PFchs.txt
+PHI_JER=Spring16_25nsV10_MC_PhiResolution_AK4PFchs.txt
+
 
