Made small changes to analyzer outputs, streamlined plotters, created lhe_weights file

--- a/cfg_files/htt_baseline_j30l0.cfg
+++ b/cfg_files/htt_baseline_j30l0.cfg
@@ -7,12 +7,15 @@ electron_sf=electron_sf_Moriond17_TightCutID.root
 #btag_sf=cMVAv2Moriond17.csv
 #btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root # original file using MVAMEDIUM
 btag_sf=CSVv2_Moriond17_B_H.csv
-btag_eff=htt_baselineJ20L0_ttJets_CSVMEDIUM_CSVMEDIUM_efficiencies.root # to be used with 3+ jets, made from ttJets with ptmin=20, lead_ptmiin=0 
+btag_eff=htt_baselineJ30L0_ttJets_CSVMEDIUM_CSVMEDIUM_efficiencies.root # to be used with 3+ jets, valid for using ttJets with ptmin=30, lead ptmin=0
+#btag_eff=htt_baselineJ30_3jets_CSVMEDIUM_CSVMEDIUM_efficiencies.root # to be used with 3 or more jets
 pseudotop=0
 #deepcsv_sffile=DeepCSVMoriond17_PRELIMINARY.csv #added for deepcsv instead
 
 [ttsolver]
-filename=prob_htt_perm_baseline_j20l0_ttJets.root #combines 3J and 4+ jet dists from ttJets in TTBarSolver for ptmin=20, lead_ptmin=0
+#filename=prob_htt_perm_baseline_j20_ttJetsAll.root #combines 3J and 4+ jet dists from ttJetsM0, ttJetsM700, ttJetsM1000 in TTBarSolver
+filename=prob_htt_perm_baseline_j30l0_ttJets.root #combines 3J and 4+ jet dists from ttJets in TTBarSolver for ptmin=30, lead ptmin=0
+#filename=prob_htt_perm_baseline_j20_ttJets_3J.root #combining resolved 4+jet and all 3 jet events in TTBarSolver
 #filename=htt_perm_baseline_j20.root #original htt_simple file
 dirname=nosys
 ptratio=0
@@ -24,8 +27,8 @@ merged_3J=1
 lost_3J=1
 
 [event]
-#MTCut=50.0
-MTCut=0.0 # only for htt_simple
+MTCut=50.0
+#MTCut=0.0 ##only used for htt_simple
 use_trig=1
 use_filters=1
 smear_met=0
@@ -72,7 +75,7 @@ drval=0.4
 [jets]
 n_min=3 #needed for 3J category
 #n_min=4 #original jet cut for htt_simple
-ptmin=20.
+ptmin=30.
 lead_ptmin=0.
 etamax=2.4
 applyJER=1
@@ -88,6 +91,8 @@ tightb=CSVMEDIUM
 looseb=CSVMEDIUM
 #tightb=MVAMEDIUM
 #looseb=MVAMEDIUM
+#tightb=DEEPCSVMEDIUM
+#looseb=DEEPCSVMEDIUM
 
 [best_permutation]
 tightb=CSVMEDIUM 
@@ -98,8 +103,8 @@ JER_SF=Spring16_25nsV10_MC_SF_AK4PFchs.txt
 PT_JER=Spring16_25nsV10_MC_PtResolution_AK4PFchs.txt
 PHI_JER=Spring16_25nsV10_MC_PhiResolution_AK4PFchs.txt
 
-[alpha_correction] ## taken from fit_parameters.json for http://home.fnal.gov/~jdulemba/Plots/ttbar_reco_3J/2016Data/JetpTcut20/LeadPt0/Only_Alpha_Correction/Full/ttJetsM0/3J_Event_Plots/Lost_BP/Alpha_Correction/fit_parameters.json
-## only valid for ptmin=20,etamax=2.4,lead_ptmin=0
-slope=0.5842
-yint=0.4366
+[alpha_correction] ## taken from fit_parameters.json for http://home.fnal.gov/~jdulemba/Plots/ttbar_reco_3J/2018/JetpTcut*/Only_Alpha_Correction/Full/ttJetsM0/3J_Event_Plots/Lost_BP/Alpha_Correction/fit_parameters.json
+## only valid for ptmin=30, etamax=2.4, lead_ptmin=50
+slope=0.4019
+yint=0.5834
 
