--- a/ctag_scripts/ctag_eff.cfg
+++ b/ctag_scripts/ctag_eff.cfg
@@ -27,7 +27,7 @@ electron_sf=electron_sf_Moriond17_TightCutID.root
 [ttsolver]
 #filename=ctag_eff_permutations.root
 #filename=ttJets_CTag2017.root
-filename=ctag_eff_permutations_2018.root #files in different jobids might be different
+filename=ctag_eff_permutations_2018.root #files in different jobids might be different even if they have same names
 dirname=nosys
 btag=0
 nusolver=0
