Changed how alpha correction is applied

--- a/cfg_files/htt_baseline_j20.cfg
+++ b/cfg_files/htt_baseline_j20.cfg
@@ -7,7 +7,7 @@ electron_sf=electron_sf_Moriond17_TightCutID.root
 #btag_sf=cMVAv2Moriond17.csv
 #btag_eff=htt_baselineJ20_MVAMEDIUM_MVAMEDIUM_efficiencies.root # original file using MVAMEDIUM
 btag_sf=CSVv2_Moriond17_B_H.csv
-btag_eff=htt_baselineJ20L0_ttJets_CSVMEDIUM_CSVMEDIUM_efficiencies.root # to be used with 3+ jets, made from ttJets with ptmin=20, lead_ptmiin=0 
+btag_eff=htt_baselineJ20L0_ttJets_CSVMEDIUM_CSVMEDIUM_efficiencies.root # to be used with 3+ jets, made from ttJets with ptmin=20, lead_ptmiin=0 made from htt_flav_effs
 pseudotop=0
 #deepcsv_sffile=DeepCSVMoriond17_PRELIMINARY.csv #added for deepcsv instead
 
@@ -98,8 +98,6 @@ JER_SF=Spring16_25nsV10_MC_SF_AK4PFchs.txt
 PT_JER=Spring16_25nsV10_MC_PtResolution_AK4PFchs.txt
 PHI_JER=Spring16_25nsV10_MC_PhiResolution_AK4PFchs.txt
 
-[alpha_correction] ## taken from fit_parameters.json for http://home.fnal.gov/~jdulemba/Plots/ttbar_reco_3J/2016Data/JetpTcut20/LeadPt0/Only_Alpha_Correction/Full/ttJetsM0/3J_Event_Plots/Lost_BP/Alpha_Correction/fit_parameters.json
+[alpha_correction] ## taken from fit_parameters.json for http://home.fnal.gov/~jdulemba/Plots/ttbar_reco_3J/2016Data/JetpTcut20/LeadPt0/Only_Alpha_Correction/Full/ttJets/3J_Event_Plots/Lost_BP/Alpha_Correction/fit_parameters.json
 ## only valid for ptmin=20,etamax=2.4,lead_ptmin=0
-slope=0.5842
-yint=0.4366
-
+fit=fit_parameters.json
