--- a/cfg_files/ttbar_reco_3J_j20l0.cfg
+++ b/cfg_files/ttbar_reco_3J_j20l0.cfg
@@ -90,8 +90,6 @@ looseb=CSVMEDIUM
 #looseb=NONE
 ordering=mass_discriminant
 
-[alpha_correction] ## taken from fit_parameters.json for http://home.fnal.gov/~jdulemba/Plots/ttbar_reco_3J/2018/JetpTcut20/LeadPt0/Only_Alpha_Correction/Full/ttJetsM0/3J_Event_Plots/Lost_BP/Alpha_Correction/fit_parameters.json
+[alpha_correction] ## taken from fit_parameters.json for http://home.fnal.gov/~jdulemba/Plots/ttbar_reco_3J/2018/JetpTcut20/LeadPt0/Only_Alpha_Correction/Full/ttJets/3J_Event_Plots/Lost_BP/Alpha_Correction/fit_parameters.json
 ## only valid for ptmin=20,etamax=2.4,lead_ptmin=0
-slope=0.5842
-yint=0.4366
-
+fit=fit_parameters.json
