Alpha correction access changed

--- a/cfg_files/htt_baseline_j20.cfg
+++ b/cfg_files/htt_baseline_j20.cfg
@@ -100,4 +100,5 @@ PHI_JER=Spring16_25nsV10_MC_PhiResolution_AK4PFchs.txt
 
 [alpha_correction] ## taken from fit_parameters.json for http://home.fnal.gov/~jdulemba/Plots/ttbar_reco_3J/2016Data/JetpTcut20/LeadPt0/Only_Alpha_Correction/Full/ttJets/3J_Event_Plots/Lost_BP/Alpha_Correction/fit_parameters.json
 ## only valid for ptmin=20,etamax=2.4,lead_ptmin=0
-fit=fit_parameters.json
+#fit=fit_parameters.json
+fit=alpha_hists.root
