--- a/cfg_files/ttbar_reco_3J_j20l0.cfg
+++ b/cfg_files/ttbar_reco_3J_j20l0.cfg
@@ -92,4 +92,5 @@ ordering=mass_discriminant
 
 [alpha_correction] ## taken from fit_parameters.json for http://home.fnal.gov/~jdulemba/Plots/ttbar_reco_3J/2018/JetpTcut20/LeadPt0/Only_Alpha_Correction/Full/ttJets/3J_Event_Plots/Lost_BP/Alpha_Correction/fit_parameters.json
 ## only valid for ptmin=20,etamax=2.4,lead_ptmin=0
-fit=fit_parameters.json
+fit=alpha_hists.root
+#fit=fit_parameters.json
