Update before cloning for 2018 data

--- a/cfg_files/htt_baseline_j20.cfg
+++ b/cfg_files/htt_baseline_j20.cfg
@@ -14,7 +14,7 @@ electron_sf=electron_sf_Moriond17_TightCutID.root
 
     # DEEPCSV
 btag_sf=DeepCSV_94XSF_V3_B_F.csv
-btag_eff=htt_baselineJ20L0_3jets_2017data_DEEPCSVMEDIUM_DEEPCSVMEDIUM_efficiencies.root # to be used with 3 or more jets
+btag_eff=htt_baselineJ20L0_3jets_2017data_DEEPCSVMEDIUM_DEEPCSVMEDIUM_efficiencies.root # to be used with 3 or more jets from htt_flav_effs
 
 pseudotop=0
 #deepcsv_sffile=DeepCSVMoriond17_PRELIMINARY.csv #added for deepcsv instead
@@ -34,8 +34,8 @@ merged_3J=1
 lost_3J=1
 
 [event]
-#MTCut=50.0
-MTCut=0.0  # only for htt_simple!
+MTCut=50.0
+#MTCut=0.0  # only for htt_simple!
 use_trig=1
 use_filters=1
 smear_met=0
@@ -116,6 +116,14 @@ PHI_JER=Spring16_25nsV10_MC_PhiResolution_AK4PFchs.txt
 
 [alpha_correction] ## taken from fit_parameters.json for http://home.fnal.gov/~jdulemba/Plots/ttbar_reco_3J/2017Data/JetpTcut20/LeadPt0/Only_Alpha_Correction/ttJetsAll/3J_Event_Plots/Lost_BP/Alpha_Correction/fit_parameters.json
 ## only valid for ptmin=20,etamax=2.4,lead_ptmin=0
-slope=0.6179
-yint=0.4064
 
+## only valid for 2017data
+#slope=0.6179
+#yint=0.4064
+
+## only valid for deepctag_v14
+slope=0.5690
+yint=0.4426
+c0=-0.1131
+c1=0.9536
+c2=0.1395
