--- a/ctag_scripts/ctag_eff.cfg
+++ b/ctag_scripts/ctag_eff.cfg
@@ -1,33 +1,33 @@
 [general]
 skew_ttpt_distribution=0
 
-#    ## CSV files
-#btag_sf=CSVv2Moriond18_PRELIMINARY.csv
-#btag_eff=ctageff_ttsel_CSVTIGHT_CSVLOOSE_efficiencies.root
-#wjets_efficiencies=ctageff_wjets_efficiencies_CSVTIGHT_CSVLOOSE.root
-
     ## DeepCSV files
-btag_sf=DeepCSVMoriond18_PRELIMINARY.csv
+#btag_sf=DeepCSVMoriond18_PRELIMINARY.csv
+btag_sf=DeepCSV_Prompt18_comb.csv
 btag_eff=ctageff_ttsel_DEEPCSVTIGHT_DEEPCSVLOOSE_efficiencies.root
 wjets_efficiencies=ctageff_wjets_efficiencies_DEEPCSVTIGHT_DEEPCSVLOOSE.root
 
+#    ## DeepJet files
+#btag_sf=DeepJet_Prompt18_comb.csv
+#btag_eff=ctageff_ttsel_DEEPCSVTIGHT_DEEPCSVLOOSE_efficiencies.root
+#wjets_efficiencies=ctageff_wjets_efficiencies_DEEPCSVTIGHT_DEEPCSVLOOSE.root
+
 pseudotop=0
-csv_sffile=CSVv2Moriond18_PRELIMINARY.csv
-deepcsv_sffile=DeepCSVMoriond18_PRELIMINARY.csv
-#cmva_sffile=cMVAv2Moriond17_PRELIMINARY.csv
-ctag_sffile=CTaggerMoriond17_PRELIMINARY.csv
-#ctag_sffile=CTaggerMoriond18_PRELIMINARY.csv
-deepctag_sffile=DeepCTaggerMoriond18_PRELIMINARY.csv
+#deepcsv_sffile=DeepCSVMoriond18_PRELIMINARY.csv
+deepcsv_sffile=DeepCSV_Prompt18_comb.csv
+deepjet_sffile=DeepJet_Prompt18_comb.csv
+deepcsvctag_sffile=DeepCTaggerMoriond18_PRELIMINARY.csv
+deepjetctag_sffile=DeepCTaggerMoriond18_PRELIMINARY.csv
 apply_trigger=0
 
-muon_sf=muon_sf_Moriond18_TightID_TightIso_RunBCDEF_PRELIMINARY.root
-#muon_sf=muon_sf_Moriond17_TightID_TightIso_PRELIMINARY.root
+muon_sf=muon_sf_Moriond19_2018ABCD_TightID_TightIso_2017trig_PRELIMINARY.root
+#muon_sf=muon_sf_Moriond18_TightID_TightIso_RunBCDEF_PRELIMINARY.root
 electron_sf=electron_sf_Moriond17_TightCutID.root
 
 [ttsolver]
 #filename=ctag_eff_permutations.root
 #filename=ttJets_CTag2017.root
-filename=ctag_eff_permutations_2018.root #files in different jobids might be different even if they have same names
+filename=prob_ctag_eff_permutations_2018.root
 dirname=nosys
 btag=0
 nusolver=0
@@ -68,7 +68,8 @@ etamax=-0.2
 n_min=4
 n_max=4
 ptmin=25.
-etamax=2.4
+etamax=2.5
+#etamax=2.4
 applyJER=1
 
 [permutations]
@@ -85,5 +86,3 @@ ordering=mass_discriminant
 [best_permutation]
 tightb=DEEPCSVTIGHT
 looseb=DEEPCSVLOOSE
-#tightb=CSVTIGHT
-#looseb=CSVLOOSE
