--- a/ctag_scripts/ctag_eff.cfg
+++ b/ctag_scripts/ctag_eff.cfg
@@ -27,7 +27,8 @@ electron_sf=electron_sf_Moriond17_TightCutID.root
 [ttsolver]
 #filename=ctag_eff_permutations.root
 #filename=ttJets_CTag2017.root
-filename=prob_ctag_eff_permutations_2018.root
+filename=prob_ctag_eff_permutations_2018_DeepCSV.root
+#filename=prob_ctag_eff_permutations_2018_DeepJet.root
 dirname=nosys
 btag=0
 nusolver=0
