--- a/ctag_scripts/ctag_eff.cfg
+++ b/ctag_scripts/ctag_eff.cfg
@@ -1,16 +1,16 @@
 [general]
 skew_ttpt_distribution=0
 
-#    ## DeepCSV files
-##btag_sf=DeepCSVMoriond18_PRELIMINARY.csv
-#btag_sf=DeepCSV_102XSF_V1.csv
-#btag_eff=ctageff_ttsel_DEEPCSVTIGHT_DEEPCSVLOOSE_efficiencies.root
-#wjets_efficiencies=ctageff_wjets_efficiencies_DEEPCSVTIGHT_DEEPCSVLOOSE.root
+    ## DeepCSV files
+#btag_sf=DeepCSVMoriond18_PRELIMINARY.csv
+btag_sf=DeepCSV_102XSF_V1.csv
+btag_eff=ctageff_ttsel_DEEPCSVTIGHT_DEEPCSVLOOSE_efficiencies.root
+wjets_efficiencies=ctageff_wjets_efficiencies_DEEPCSVTIGHT_DEEPCSVLOOSE.root
 
-    ## DeepJet files
-btag_sf=DeepJet_102XSF_V1.csv
-btag_eff=ctageff_ttsel_DEEPJETTIGHT_DEEPJETLOOSE_efficiencies.root
-wjets_efficiencies=ctageff_wjets_efficiencies_DEEPJETTIGHT_DEEPJETLOOSE.root
+#    ## DeepJet files
+#btag_sf=DeepJet_102XSF_V1.csv
+#btag_eff=ctageff_ttsel_DEEPJETTIGHT_DEEPJETLOOSE_efficiencies.root
+#wjets_efficiencies=ctageff_wjets_efficiencies_DEEPJETTIGHT_DEEPJETLOOSE.root
 
 pseudotop=0
 #deepcsv_sffile=DeepCSVMoriond18_PRELIMINARY.csv
@@ -20,15 +20,16 @@ deepcsvctag_sffile=DeepCTaggerMoriond18_PRELIMINARY.csv
 deepjetctag_sffile=DeepCTaggerMoriond18_PRELIMINARY.csv
 apply_trigger=0
 
-muon_sf=muon_sf_Moriond19_2018ABCD_TightID_TightIso_2017trig_PRELIMINARY.root
-#muon_sf=muon_sf_Moriond18_TightID_TightIso_RunBCDEF_PRELIMINARY.root
-electron_sf=electron_sf_Moriond17_TightCutID.root
+muon_sf=muon_sf_Moriond19_TightID_TightIso_Preliminary.root
+#muon_sf=muon_sf_Moriond19_2018ABCD_TightID_TightIso_2017trig_PRELIMINARY.root
+electron_sf=electron_sf_Moriond19_TightCutID_Preliminary.root
+#electron_sf=electron_sf_Moriond17_TightCutID.root
 
 [ttsolver]
 #filename=ctag_eff_permutations.root
 #filename=ttJets_CTag2017.root
-#filename=prob_ctag_eff_permutations_2018_DeepCSV.root
-filename=prob_ctag_eff_permutations_2018_DeepJet.root
+filename=prob_ctag_eff_permutations_2018_DeepCSV.root
+#filename=prob_ctag_eff_permutations_2018_DeepJet.root
 dirname=nosys
 btag=0
 nusolver=0
@@ -85,7 +86,7 @@ looseb=NONE
 ordering=mass_discriminant
 
 [best_permutation]
-#tightb=DEEPCSVTIGHT
-#looseb=DEEPCSVLOOSE
-tightb=DEEPJETTIGHT
-looseb=DEEPJETLOOSE
+tightb=DEEPCSVTIGHT
+looseb=DEEPCSVLOOSE
+#tightb=DEEPJETTIGHT
+#looseb=DEEPJETLOOSE
